--- a/public/less/theme/_add-listing.less
+++ b/public/less/theme/_add-listing.less
@@ -81,7 +81,7 @@
 	    // transition: all 0.2s ease;
 	    position: fixed;
 	    width: 100%;
-	    z-index: 11;
+	    z-index: 9999;
 	    // top: 5.3em;
     	&.active{
     		top: 0;
